Inclusão do modal de despesa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<cf-header></cf-header>
+<cf-header (myEvent)="despesaModal.openModalWithComponent()"></cf-header>
 <cf-transaction-table></cf-transaction-table>
+<cf-despesa-modal #despesaModal></cf-despesa-modal>
