--- a/src/app/cf-header/cf-header.component.html
+++ b/src/app/cf-header/cf-header.component.html
@@ -24,7 +24,7 @@
 
       <div class="text-end">
         <!-- <button type="button" class="btn btn-outline-light me-2">Login</button> -->
-        <button type="button" class="btn btn-warning">
+        <button type="button" class="btn btn-warning" (click)="chamaModal()">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg"
             viewBox="0 0 16 16">
             <path fill-rule="evenodd"
