--- a/src/app/cf-header/cf-header.component.html
+++ b/src/app/cf-header/cf-header.component.html
@@ -11,11 +11,6 @@
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2 text-secondary">&nbsp;</a></li>
-        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-        <!-- <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li> -->
       </ul>
 
       <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
@@ -24,14 +19,22 @@
 
       <div class="text-end">
         <!-- <button type="button" class="btn btn-outline-light me-2">Login</button> -->
-        <button type="button" class="btn btn-warning" (click)="chamaModal()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg"
-            viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-              d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
-          </svg>
-          Despesa
-        </button>
+        <div class="btn-group" dropdown>
+          <button type="button" class="btn btn-warning dropdown-toggle" dropdownToggle
+            aria-controls="dropdown-basic">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg"
+              viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+            </svg>
+            Despesa
+            <span class="caret"></span>
+          </button>
+          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
+            <li role="menuitem"><a class="dropdown-item" href="#" (click)="chamaModal('inserirDespesa')">Nova Despesa</a></li>
+            <li role="menuitem"><a class="dropdown-item" href="#" (click)="chamaModal('importarDespesa')">Importar Despesas</a></li>
+          </ul>
+        </div>
 
       </div>
     </div>
