--- a/src/app/cf-transaction-table/cf-transaction-table.component.html
+++ b/src/app/cf-transaction-table/cf-transaction-table.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="overflow-y: auto;">
     <div class="row">
         <table id="example" class="table table-striped" style="width:100%">
             <thead>
@@ -28,7 +28,7 @@
             </tbody>
         </table>
     </div>
-    <!-- <div class="row">
+    <div class="row">
         <div class="col"></div>
         <div class="col-2 text-end">
             <button type="button" 
@@ -61,13 +61,13 @@
                 <span class="visually-hidden"></span>
             </button></div>
         <div class="col"></div>
-    </div> -->
-    <div class="row">
+    </div>
+    <!-- <div class="row">
         <div class="col-12 d-flex justify-content-center">
-            <pagination [totalItems]="30" 
-                        [itemsPerPage]="10" 
+            <pagination [totalItems]="300" 
+                        [itemsPerPage]="50" 
                         [(ngModel)]="currentPage" 
                         (pageChanged)="buscaListaDespesa($event.page)" class="my-pagination"></pagination>
         </div>
-    </div>
+    </div> -->
 </div>
