--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,41 @@
 <cf-header (myEvent)="abrirModal($event)"></cf-header>
-<cf-transaction-table></cf-transaction-table>
+
+<div class="container" id="main">
+    <div class="row">
+        <div class="col-lg-12">
+            &nbsp;
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-body">
+                    <cf-grafico-categoria></cf-grafico-categoria>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-7">
+            <div class="card">
+                <div class="card-body">
+                    <cf-grafico-transacao-ano></cf-grafico-transacao-ano>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            &nbsp;
+        </div>
+    </div>
+    <div class="row" id="row-transaction-table">
+        <div class="col-lg-12">
+            <div class="card">
+                <cf-transaction-table></cf-transaction-table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <cf-despesa-modal #despesaModal></cf-despesa-modal>
 <cf-importar-modal #importaDespesaModal></cf-importar-modal>
