--- a/src/app/cf-transaction-table/cf-transaction-table.component.html
+++ b/src/app/cf-transaction-table/cf-transaction-table.component.html
@@ -17,11 +17,13 @@
                     <td>{{ despesa.tipoRateio }} </td>
                     <td>
                         <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-trash-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
-                            </svg>
+                            <a href="" (click)="apagarDespesa(despesa.id)">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-trash-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
+                                </svg>
+                            </a>
                         </span>
                     </td>
                 </tr>
@@ -31,10 +33,8 @@
     <div class="row">
         <div class="col"></div>
         <div class="col-2 text-end">
-            <button type="button" 
-                    class="btn btn-outline-secondary btn-lg" 
-                    (click)="buscaListaDespesa(paginaAnterior)"
-                    [disabled]="paginaAtual==1">
+            <button type="button" class="btn btn-outline-secondary btn-lg" (click)="buscaListaDespesa(paginaAnterior)"
+                [disabled]="paginaAtual==1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-chevron-bar-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
@@ -43,15 +43,13 @@
                 <span class="visually-hidden"></span>
             </button>
         </div>
-        <div class="col-2 text-center" >
+        <div class="col-2 text-center">
             <div style="margin-top:12px;"> {{(paginaAtual)}} de {{totalDePaginas}} </div>
         </div>
-        <div class="col-2"> 
+        <div class="col-2">
 
-            <button type="button" 
-                    class="btn btn-outline-secondary btn-lg" 
-                    (click)="buscaListaDespesa(proximaPagina)"
-                    [disabled]="paginaAtual==totalDePaginas">
+            <button type="button" class="btn btn-outline-secondary btn-lg" (click)="buscaListaDespesa(proximaPagina)"
+                [disabled]="paginaAtual==totalDePaginas">
 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-chevron-bar-right" viewBox="0 0 16 16">
@@ -59,7 +57,8 @@
                         d="M4.146 3.646a.5.5 0 0 0 0 .708L7.793 8l-3.647 3.646a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708 0zM11.5 1a.5.5 0 0 1 .5.5v13a.5.5 0 0 1-1 0v-13a.5.5 0 0 1 .5-.5z" />
                 </svg>
                 <span class="visually-hidden"></span>
-            </button></div>
+            </button>
+        </div>
         <div class="col"></div>
     </div>
     <!-- <div class="row">
