--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,14 @@
         </div>
     </div>
     <div class="row">
+        <cf-status-rateio></cf-status-rateio>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            &nbsp;
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-5">
             <div class="card">
                 <div class="card-body">
@@ -37,5 +45,5 @@
 </div>
 
 
-<cf-despesa-modal #despesaModal></cf-despesa-modal>
+<cf-despesa-modal #despesaModal (saveEvent)="atualizaDados()"></cf-despesa-modal>
 <cf-importar-modal #importaDespesaModal></cf-importar-modal>
