--- a/src/app/cf-status-rateio/cf-status-rateio.component.html
+++ b/src/app/cf-status-rateio/cf-status-rateio.component.html
@@ -1,1 +1,29 @@
-<p>cf-status-rateio works!</p>
+<div class="row">
+    <div class="col-md-6" *ngFor="let despesaPessoa of listaDepesaPessoa">
+        <div class="card p-3 mb-2">
+            <div class="d-flex justify-content-between">
+                <div class="d-flex flex-row align-items-center">
+                    <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
+                    <div class="ms-2 c-details">
+                        <h6 class="mb-0"> {{ despesaPessoa.nomeDono }} </h6>
+                    </div>
+                </div>
+                <div class="badge"> <span>{{ despesaPessoa.valorTaxa}}</span> </div>
+            </div>
+            <div class="mt-5">
+                <h2 class="heading"> {{ despesaPessoa.valorTotal | currency:'BRL':'symbol':'1.2-2'}}</h2>
+                
+                <div class="mt-5">
+                    <div>{{ despesaPessoa.valorTotal | currency:'BRL':'symbol':'1.2-2'}}</div>
+                <div>{{ despesaPessoa.valorTotal | currency:'BRL':'symbol':'1.2-2'}}</div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 30.56%" aria-valuenow="50"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="mt-3"> <span class="text1">{{ despesaPessoa.valorTotal | currency:'BRL':'symbol':'1.2-2'}} <span class="text2">de R$ 6.000,00</span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
