--- a/src/app/cf-despesa-modal/cf-despesa-modal.component.html
+++ b/src/app/cf-despesa-modal/cf-despesa-modal.component.html
@@ -1,7 +1,7 @@
 <ng-template #template>
     <div class="modal-header">
         <h4 class="modal-title pull-left"> {{title}}</h4>
-        <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="bsModalRef?.hide()">
+        <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="fecharModal()">
             <span aria-hidden="true" class="visually-hidden">&times;</span>
         </button>
     </div>
@@ -66,7 +66,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-success" (click)="inserirNovaDespesa()">Salvar</button>
-        <button type="button" class="btn btn-danger" (click)="bsModalRef?.hide()">Close</button>
+        <button type="button" class="btn btn-danger" (click)="fecharModal()">Close</button>
     </div>
 </ng-template>
 <script>
