--- a/src/app/cf-importar-modal/cf-importar-modal.component.html
+++ b/src/app/cf-importar-modal/cf-importar-modal.component.html
@@ -84,9 +84,8 @@
         </ng-template>
     </div>
     <div class="modal-footer">
-        <!-- <button class="btn btn-warning" (click)="importFile()">Upload</button> -->
         <button type="button" class="btn btn-success" *ngIf="listaDespesaImportar.length"
-            (click)="salvar()">Salvar</button>
+            (click)="openConfirmAlert()">Salvar</button>
         <button type="button" class="btn btn-danger" (click)="closeModal()"> Close</button>
     </div>
 </ng-template>
