Tela de preferencias

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,9 @@
     </div>
 </div>
 
+<!-- MODAIS-->
 
 <cf-despesa-modal #despesaModal (saveEvent)="atualizaDados()"></cf-despesa-modal>
 <cf-importar-modal #importaDespesaModal (importEvent)="atualizaDados()"></cf-importar-modal>
 <cf-rateio-modal #rateioModal (saveRateioEvent)="atualizaDados()"></cf-rateio-modal>
+<cf-preferencias-modal #preferenciasModal></cf-preferencias-modal>
