--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <cf-header (myEvent)="abrirModal($event)"></cf-header>
-
+<cf-seletor-data (selectedDates)="getUpdateDates($event)"></cf-seletor-data>
 <div class="container" id="main">
     <div class="row">
         <div class="col-lg-12">
