--- a/src/app/cf-transaction-table/cf-transaction-table.component.html
+++ b/src/app/cf-transaction-table/cf-transaction-table.component.html
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="col"></div>
         <div class="col-2 text-end">
-            <button type="button" class="btn btn-outline-secondary btn-lg" (click)="buscaListaDespesa(paginaAnterior)"
+            <button type="button" class="btn btn-outline-secondary btn-lg" (click)="buscaPaginaAnterior(paginaAnterior)"
                 [disabled]="paginaAtual==1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-chevron-bar-left" viewBox="0 0 16 16">
@@ -49,7 +49,7 @@
         </div>
         <div class="col-2">
 
-            <button type="button" class="btn btn-outline-secondary btn-lg" (click)="buscaListaDespesa(proximaPagina)"
+            <button type="button" class="btn btn-outline-secondary btn-lg" (click)="buscaProximaPagina(proximaPagina)"
                 [disabled]="paginaAtual==totalDePaginas">
 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
