--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
     <div class="row" id="row-transaction-table">
         <div class="col-lg-12">
             <div class="card">
-                <cf-transaction-table (deleteEvent)="atualizaDados()"></cf-transaction-table>
+                <cf-transaction-table (deleteEvent)="atualizaDados()" (myEvent)="abrirModalDespesa($event)"></cf-transaction-table>
             </div>
         </div>
     </div>
