--- a/src/app/cf-despesa-modal/cf-despesa-modal.component.html
+++ b/src/app/cf-despesa-modal/cf-despesa-modal.component.html
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-success" (click)="inserirNovaDespesa()">Salvar</button>
+        <button type="button" class="btn btn-success" (click)="salvarDespesa()">Salvar</button>
         <button type="button" class="btn btn-danger" (click)="fecharModal()">Close</button>
     </div>
 </ng-template>
