--- a/src/app/cf-status-rateio/cf-status-rateio.component.html
+++ b/src/app/cf-status-rateio/cf-status-rateio.component.html
@@ -33,12 +33,12 @@
                 <div class="mt-3">
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" 
-                        [style.width]="calculoBarraString(despesaPessoa.valorTotal,6000)" 
-                        [style.background-color]="corBarra(calculoBarra(despesaPessoa.valorTotal,6000))" aria-valuenow="50"
+                        [style.width]="calculoBarraString(despesaPessoa.valorTotal,despesaPessoa.valorSalario)" 
+                        [style.background-color]="corBarra(calculoBarra(despesaPessoa.valorTotal,despesaPessoa.valorSalario))" aria-valuenow="50"
                             aria-valuemin="0" aria-valuemax="100"></div>
                     </div>                    
                     <div class="d-flex justify-content-between mt-3">
-                        <div class="text1">{{ despesaPessoa.valorTotal | currency:'BRL':'symbol':'1.2-2'}} de R$ 6.000,00</div>
+                        <div class="text1">{{ despesaPessoa.valorTotal | currency:'BRL':'symbol':'1.2-2'}} de {{ despesaPessoa.valorSalario | currency:'BRL':'symbol':'1.2-2'}}</div>
                         <div>
                           <a href="#" (click)="openRateioModal(despesaPessoa,mes,ano)">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
