--- a/src/app/cf-header/cf-header.component.html
+++ b/src/app/cf-header/cf-header.component.html
@@ -1,7 +1,7 @@
 <header class="p-3 bg-dark text-white">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" onclick="javascript:alert('0.0.2')">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-piggy-bank-fill"
           viewBox="0 0 16 16">
           <path fill-rule="evenodd"
